--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <html>
 <head>
-<title>363 Tagged Open Ruby Bugs as of 2021-06-15 08:27:44 +0900</title>
+<title>366 Tagged Open Ruby Bugs as of 2021-06-16 00:02:54 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
 <p class="filter-buttons">Available Tags: <input type="submit" value="core" />
 <input type="submit" value="patch" />
 <input type="submit" value="win" />
-<input type="submit" value="build" />
 <input type="submit" value="maybenotbug" />
+<input type="submit" value="build" />
 <input type="submit" value="lib" />
 <input type="submit" value="ext" />
 <input type="submit" value="ractor" />
 <input type="submit" value="notbug" />
 <input type="submit" value="encoding" />
 <input type="submit" value="thread" />
-<input type="submit" value="os/arch" />
 <input type="submit" value="test" />
+<input type="submit" value="os/arch" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="perf" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="fiber" />
-<input type="submit" value="refine" />
 <input type="submit" value="regexp" />
+<input type="submit" value="refine" />
 <input type="submit" value="autoload" />
 <input type="submit" value="parser" />
 <input type="submit" value="irb" />
@@ -34,9 +34,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">363</span> matched)
+(<span id="matched">366</span> matched)
 <table>
-<caption>363 Tagged Open Ruby Bugs as of 2021-06-15 08:27:44 +0900</caption>
+<caption>366 Tagged Open Ruby Bugs as of 2021-06-16 00:02:54 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -45,6 +45,41 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" os-arch test ">
+<td><a href="https://bugs.ruby-lang.org/issues/17991">17991</a>
+</td>
+<td>os-arch test</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17991">[TEST, CRASH] TestBugReporter#test_bug_reporter_add </a>
+</td>
+</tr>
+<tr class=" regexp ">
+<td><a href="https://bugs.ruby-lang.org/issues/17990">17990</a>
+</td>
+<td>regexp</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17990">Inconsistent behavior of Regexp quantifiers over characters with complex case foldings</a>
+</td>
+</tr>
+<tr class=" regexp ">
+<td><a href="https://bugs.ruby-lang.org/issues/17989">17989</a>
+</td>
+<td>regexp</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17989">Case insensitive Regexps do not handle characters with overlapping case foldings</a>
+</td>
+</tr>
+<tr class=" notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17987">17987</a>
+</td>
+<td>notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17987">Ruby报错</a>
+</td>
+</tr>
+<tr class=" ractor notbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17986">17986</a>
+</td>
+<td>ractor notbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17986">Ractor is stdlib Socket unfriendly</a>
+</td>
+</tr>
 <tr class=" ractor ">
 <td><a href="https://bugs.ruby-lang.org/issues/17985">17985</a>
 </td>
@@ -64,13 +99,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17951">Collistions in Proc#hash values for blocks defined at the same line</a>
-</td>
-</tr>
-<tr class=" build os-arch ">
-<td><a href="https://bugs.ruby-lang.org/issues/17949">17949</a>
-</td>
-<td>build os-arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17949">[SOLARIS11, SPARC, SEGFAULT] generating encdb.h</a>
 </td>
 </tr>
 <tr class=" win ">
@@ -148,13 +176,6 @@
 </td>
 <td>ractor cygwin</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17882">bootstraptest/test_ractor.rb:224 segfaults on Cygwin</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17880">17880</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17880">[BUG] We are killing the stack canary set by `opt_setinlinecache`</a>
 </td>
 </tr>
 <tr class=" ractor ">
