--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>341 Tagged Open Ruby Bugs as of 2021-06-17 07:53:43 +0900</title>
+<title>342 Tagged Open Ruby Bugs as of 2021-06-18 00:56:21 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -9,8 +9,8 @@
 <input type="submit" value="win" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="build" />
-<input type="submit" value="lib" />
 <input type="submit" value="ractor" />
+<input type="submit" value="lib" />
 <input type="submit" value="ext" />
 <input type="submit" value="notbug" />
 <input type="submit" value="os/arch" />
@@ -33,9 +33,9 @@
 <input type="submit" value="misc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">341</span> matched)
+(<span id="matched">342</span> matched)
 <table>
-<caption>341 Tagged Open Ruby Bugs as of 2021-06-17 07:53:43 +0900</caption>
+<caption>342 Tagged Open Ruby Bugs as of 2021-06-18 00:56:21 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -44,6 +44,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17998">17998</a>
+</td>
+<td>ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17998">ractor: process hanging (with ractors initialized, but not being used)</a>
+</td>
+</tr>
+<tr class=" cygwin core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17996">17996</a>
+</td>
+<td>cygwin core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17996">Cygwin: thread + pipe behavior since Ruby 2.6</a>
+</td>
+</tr>
+<tr class=" perf ractor ">
+<td><a href="https://bugs.ruby-lang.org/issues/17995">17995</a>
+</td>
+<td>perf ractor</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17995">Slow down when mjit and Ractor are being used at same time</a>
+</td>
+</tr>
 <tr class=" maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17993">17993</a>
 </td>
@@ -772,13 +793,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17101">YAML.load_file: Massive slowdown under Ruby 2.7 vs. Ruby 2.4</a>
 </td>
 </tr>
-<tr class=" notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/17098">17098</a>
-</td>
-<td>notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17098">Float#negative? reports negative zero as not negative</a>
-</td>
-</tr>
 <tr class=" notbug lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/17049">17049</a>
 </td>
@@ -896,13 +910,6 @@
 </td>
 <td>build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16836">configure-time LDFLAGS leak into ruby pkg-config file</a>
-</td>
-</tr>
-<tr class=" maybenotbug core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16835">16835</a>
-</td>
-<td>maybenotbug core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16835">SIGCHLD + system new behavior on 2.6</a>
 </td>
 </tr>
 <tr class=" maybenotbug fiber ">
